<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2011 Scripture Software (http://scripturesoftware.org/)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_bookmarks"
		android:title="@string/bookmarks"
		android:orderInCategory="0"
		android:icon="@drawable/ic_action_bookmark"
		app:showAsAction="always|withText"/>
	<item
		android:title="@string/share"
		android:id="@+id/action_share"
		android:orderInCategory="1"
		android:icon="@drawable/ic_action_mode_share"
		app:showAsAction="always|withText"/>
	<item
		android:title="@string/references"
		android:id="@+id/action_references"
		android:orderInCategory="2"
		android:icon="@drawable/ic_action_mode_parallels"
		app:showAsAction="always|withText"/>
	<item
		android:title="@string/copy"
		android:id="@+id/action_copy"
		android:orderInCategory="2"
		android:icon="@drawable/ic_action_mode_copy"
		app:showAsAction="always|withText"/>
</menu>
