<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2011 Scripture Software
  ~
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  ~
  ~ Project: BibleQuote-for-Android
  ~ File: menu_reader.xml
  ~
  ~ Created by Vladimir Yakushev at 11/2016
  ~ E-mail: ru.phoenix@gmail.com
  ~ WWW: http://www.scripturesoftware.org
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bar_chooseCh"
        android:icon="@drawable/ic_action_select"
        android:orderInCategory="0"
        android:title="@string/choice_chapter"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bar_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_bar_history"
        android:icon="@drawable/ic_action_history"
        android:orderInCategory="2"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/NightDayMode"
        android:icon="@drawable/ic_action_day_night"
        android:orderInCategory="4"
        android:title="@string/menu_night_day_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_speek"
        android:orderInCategory="5"
        android:title="@string/menu_speek"
        app:showAsAction="never" />
</menu>
