<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  ~
  ~ Project: BibleQuote-for-Android
  ~ File: drawer_menu.xml
  ~
  ~ Created by Vladimir Yakushev at 8/2016
  ~ E-mail: ru.phoenix@gmail.com
  ~ WWW: http://www.scripturesoftware.org
  ~
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_bookmarks"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/drawer_tags"
            android:icon="@drawable/ic_menu_tag"
            android:title="@string/menu_tags"/>
    </group>
    <item
        android:id="@+id/settings"
        android:title="">
        <menu>
            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/drawer_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <!--<item
                android:id="@+id/drawer_donate"
                android:icon="@drawable/ic_menu_donate"
                android:title="@string/donate"/>-->
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>